--- a/Personal_Portfolio.html
+++ b/Personal_Portfolio.html
@@ -54,20 +54,17 @@
         </header>
 
 
-        <!-- About Section -->
+        <!-- CAREER OBJECTIVE Section -->
         <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
-            <h2>About</h2>
+            <h2>Career Objective</h2>
             <hr class="w3-opacity">
-            <p>Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum consectetur adipiscing
-                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <p>
+                To obtain a challenging career in the IT industry and put all my efforts into
+                the growth of the organization and have a great working environment.An enthusiastic,
+                punctual clear minded individual with excellent communication
+                and interpersonal skills.
             </p>
-            
+
 
             <button class="w3-button w3-light-grey w3-padding-large w3-section">
                 <i class="fa fa-download"></i> Download Resume
